# haskell-atcoder-template

./: .ghci  LICENSE  README.md  Setup.hs  atcoder-template.cabal  atcorder-template.cabal
problem/: Template.hs
script/: extract
src/: Header.hs
test/: Doctest.hs
