cabal-version:       2.4

name:                atcorder-template
version:             0.1.0.0
build-type:          Custom

custom-setup
  setup-depends:
    base,
    Cabal,
    cabal-doctest,

common general
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wno-unused-imports
  build-depends:
    base             == 4.12.0.0,
    array            == 0.5.3.0,
    bytestring       == 0.10.8.2,
    containers       == 0.6.0.1,
    deepseq          == 1.4.4.0,
    ghc-prim         == 0.5.3,
    mtl              == 2.2.2,
    parsec           == 3.1.13.0,
    template-haskell == 2.14.0.0,
    text             == 1.2.3.1,
    transformers     == 0.5.6.2,

    attoparsec           == 0.13.2.3,
    fgl                  == 5.7.0.1,
    hashable             == 1.3.0.0,
    integer-logarithms   == 1.0.3,
    parallel             == 3.2.2.0,
    primitive            == 0.7.0.0,
    random               == 1.1,
    tf-random            == 0.5,
    unordered-containers == 0.2.10.0,
    vector               == 0.12.0.3,

    heaps                == 0.3.6.1,
    massiv               == 0.4.2.0,
    mono-traversable     == 1.0.13.0,
    mutable-containers   == 0.3.4,
    repa                 == 3.4.1.4,
    vector-algorithms    == 0.8.0.1,

    extra                == 1.6.18,
    lens                 == 4.18.1,
    mwc-random           == 0.14.0.0,
    psqueues             == 0.2.7.2,
    reflection           == 2.1.5,
    unboxing-vector      == 0.1.1.0,
    utility-ht           == 0.0.14,
    vector-th-unbox      == 0.2.1.7,

common problem
  import:
    general,
  default-extensions:
    CPP

executable template
  import:
    problem,
  main-is:
    problem/Template.hs

test-suite doctests
  import:
    general,
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Doctest.hs
  build-depends:
    doctest,
    QuickCheck,
  autogen-modules:
    Build_doctests
  x-doctest-components:
    exe:template
